--- a/data-manipulation/compression/decompress-data-using-quicklz.yml
+++ b/data-manipulation/compression/decompress-data-using-quicklz.yml
@@ -19,7 +19,6 @@ rule:
       - or:
         - basic block:
           - and:
-            - description: Mode 1 decompression
             - mnemonic: xor
             - mnemonic: shr
             - mnemonic: and
@@ -28,17 +27,17 @@ rule:
             - or:
               - offset: 0x4000
               - offset: 0x8000
+            # description: Mode 1 decompression
         - basic block:
           - and:
-            - description: Mode 2 decompression
             - mnemonic: shr
             - mnemonic: and
             - mnemonic: mov
             - number: 0x5
             - number: 0x1
             - number: 0x7FF
+          # description: Mode 2 decompression
         - and:
-          - description: Mode 3 decompression
           - basic block:
             - and:
               - mnemonic: shr
@@ -52,3 +51,4 @@ rule:
               - mnemonic: shr
               - mnemonic: and
               - number: 0x3FF
+          # description: Mode 3 decompression
