--- a/nursery/encrypt-data-using-salsa20-or-chacha.yml
+++ b/nursery/encrypt-data-using-salsa20-or-chacha.yml
@@ -11,7 +11,7 @@ rule:
   features:
     # The constant words spell "expand 32-byte k" in ASCII (i.e. the 4 words are "expa", "nd 3", "2-by", and "te k")
     - or:
-      - description: part of key setup
+      # - description: part of key setup
       - string: expand 32-byte k = sigma
       - string: expand 16-byte k = tau
       # if sigma and tau are in contiguous memory, may result in concatenated string
